--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-font": "^11.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.18.0",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
