--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/webpack-config": "^18.0.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@rneui/template": "^4.0.0-rc.7.stable-ts",
     "expo": "~48.0.4",
     "expo-font": "^11.1.1",
     "expo-status-bar": "~1.4.4",
@@ -23,7 +24,8 @@
     "react-native-dotenv": "^3.4.8",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "expo-barcode-scanner": "~12.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
