--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@rneui/template": "^4.0.0-rc.7.stable-ts",
     "expo": "~48.0.4",
+    "expo-barcode-scanner": "~12.3.2",
     "expo-font": "^11.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.18.0",
@@ -24,8 +26,8 @@
     "react-native-dotenv": "^3.4.8",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.10",
-    "expo-barcode-scanner": "~12.3.2"
+    "react-native-uuid": "^2.0.1",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
